# OPlabs

1.1laba/: CMakeLists.txt  FilePoiner.cpp  FilePointer.h  FileStream.cpp  FileStream.h  main.cpp  new.txt  test.txt
1.2laba/: CMakeLists.txt  func.cpp  func.h  main.cpp
2laba/: Date.cpp  Date.h  Worker.cpp  Worker.h  func.cpp  func.h  main.cpp
3laba/: Date.cpp  Date.h  func.cpp  func.h  main.cpp
3laba/3labaOP.xcodeproj/: project.pbxproj
3laba/3labaOP.xcodeproj/project.xcworkspace/xcuserdata/home.xcuserdatad/: UserInterfaceState.xcuserstate
3laba/3labaOP.xcodeproj/xcuserdata/home.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
3laba/3labaOP.xcodeproj/xcuserdata/home.xcuserdatad/xcschemes/: xcschememanagement.plist
4laba/: TDate.h  TDate1.h  TDate2.h  array.cpp  func.cpp  main.cpp
5laba/: CMakeLists.txt  CircularDeque.cpp  CircularDeque.hpp  func.cpp  func.hpp  main.cpp
6laba/: CMakeLists.txt  File.cpp  File.h  MainWindow.cpp  MainWindow.h  main.cpp
laba4/: TDate.cpp  TDate1.cpp  TDate2.cpp  array.h  func.h
laba4/5lab.xcodeproj/: project.pbxproj
laba4/5lab.xcodeproj/project.xcworkspace/xcuserdata/home.xcuserdatad/: UserInterfaceState.xcuserstate
laba4/5lab.xcodeproj/xcuserdata/home.xcuserdatad/xcschemes/: xcschememanagement.plist
